# hw_app

./: CHANGELOG.md  CMakeLists.txt  README.md  SECURITY.md
fsw/mission_inc/: hw_app_perfids.h  hw_perfids.h
fsw/platform_inc/: hw_app_msgids.h  hw_app_table.h  hw_msgids.h
fsw/src/: hw_app.c  hw_app.h  hw_app_events.h  hw_app_msg.h  hw_app_version.h  hw_events.h  hw_msg.h  hw_version.h
fsw/tables/: hw_app_tbl.c
unit-test/: CMakeLists.txt
unit-test/coveragetest/: coveragetest_hw.c  coveragetest_hw_app.c  hw_app_coveragetest_common.h  hw_coveragetest_common.h
unit-test/inc/: ut_hw.h  ut_hw_app.h
